lab5/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> program_body
Rule 2     program_body -> <empty>
Rule 3     program_body -> statements
Rule 4     statements -> stmt
Rule 5     statements -> stmt statements
Rule 6     stmt -> for_stmt
Rule 7     stmt -> while_stmt
Rule 8     stmt -> if_stmt
Rule 9     stmt -> block_stmt
Rule 10    stmt -> simple_stmt ;
Rule 11    stmt -> assign_stmt ;
Rule 12    block_stmt -> { statements }
Rule 13    if_stmt -> IF ( cond ) stmt ELSE stmt  [precedence=nonassoc, level=2]
Rule 14    if_stmt -> IF ( cond ) stmt  [precedence=nonassoc, level=1]
Rule 15    while_stmt -> WHILE ( cond ) stmt
Rule 16    for_stmt -> FOR id_ref = range stmt
Rule 17    range -> expr : expr
Rule 18    simple_stmt -> PRINT print_args
Rule 19    simple_stmt -> RETURN expr
Rule 20    simple_stmt -> CONTINUE
Rule 21    simple_stmt -> BREAK
Rule 22    print_args -> print_arg
Rule 23    print_args -> print_args , print_arg
Rule 24    print_arg -> expr
Rule 25    print_arg -> STRING
Rule 26    assign_stmt -> ref_vector assign_op expr
Rule 27    assign_stmt -> ref_matrix assign_op expr
Rule 28    assign_stmt -> id_ref assign_op expr
Rule 29    assign_op -> =
Rule 30    assign_op -> ADDASSIGN  [precedence=right, level=3]
Rule 31    assign_op -> SUBASSIGN  [precedence=right, level=3]
Rule 32    assign_op -> DIVASSIGN  [precedence=right, level=3]
Rule 33    assign_op -> MULASSIGN  [precedence=right, level=3]
Rule 34    expr -> paren_expr
Rule 35    expr -> string_lit
Rule 36    expr -> ref_vector
Rule 37    expr -> ref_matrix
Rule 38    expr -> transpose
Rule 39    expr -> unary_neg
Rule 40    expr -> mat_func_call
Rule 41    expr -> matrix_init
Rule 42    expr -> term
Rule 43    expr -> expr DOTDIV expr  [precedence=left, level=8]
Rule 44    expr -> expr DOTMUL expr  [precedence=left, level=8]
Rule 45    expr -> expr DOTSUB expr  [precedence=left, level=6]
Rule 46    expr -> expr DOTADD expr  [precedence=left, level=6]
Rule 47    expr -> expr / expr  [precedence=left, level=7]
Rule 48    expr -> expr * expr  [precedence=left, level=7]
Rule 49    expr -> expr - expr  [precedence=left, level=5]
Rule 50    expr -> expr + expr  [precedence=left, level=5]
Rule 51    unary_neg -> - expr  [precedence=right, level=9]
Rule 52    transpose -> expr '  [precedence=left, level=10]
Rule 53    paren_expr -> ( expr )
Rule 54    term -> id_ref
Rule 55    term -> number
Rule 56    string_lit -> STRING
Rule 57    cond -> expr > expr  [precedence=nonassoc, level=4]
Rule 58    cond -> expr < expr  [precedence=nonassoc, level=4]
Rule 59    cond -> expr GE expr  [precedence=nonassoc, level=4]
Rule 60    cond -> expr LE expr  [precedence=nonassoc, level=4]
Rule 61    cond -> expr NE expr  [precedence=nonassoc, level=4]
Rule 62    cond -> expr EQ expr  [precedence=nonassoc, level=4]
Rule 63    mat_func_call -> mat_func ( INTNUM , INTNUM )
Rule 64    mat_func_call -> mat_func ( INTNUM )
Rule 65    mat_func -> ZEROS
Rule 66    mat_func -> ONES
Rule 67    mat_func -> EYE
Rule 68    matrix_init -> [ mat_rows ]
Rule 69    mat_rows -> mat_row
Rule 70    mat_rows -> mat_rows , mat_row
Rule 71    mat_row -> [ row_items ]
Rule 72    row_items -> row_item
Rule 73    row_items -> row_items , row_item
Rule 74    row_item -> matrix_ref
Rule 75    row_item -> id_ref
Rule 76    row_item -> number
Rule 77    matrix_ref -> ref_matrix
Rule 78    matrix_ref -> ref_vector
Rule 79    ref_vector -> ID [ INTNUM ]
Rule 80    ref_matrix -> ID [ INTNUM , INTNUM ]
Rule 81    id_ref -> ID
Rule 82    number -> FLOATNUM
Rule 83    number -> INTNUM

Terminals, with rules where they appear:

'                    : 52
(                    : 13 14 15 53 63 64
)                    : 13 14 15 53 63 64
*                    : 48
+                    : 50
,                    : 23 63 70 73 80
-                    : 49 51
/                    : 47
:                    : 17
;                    : 10 11
<                    : 58
=                    : 16 29
>                    : 57
ADDASSIGN            : 30
BREAK                : 21
CONTINUE             : 20
DIVASSIGN            : 32
DOTADD               : 46
DOTDIV               : 43
DOTMUL               : 44
DOTSUB               : 45
ELSE                 : 13
EQ                   : 62
EYE                  : 67
FLOATNUM             : 82
FOR                  : 16
GE                   : 59
ID                   : 79 80 81
IF                   : 13 14
INTNUM               : 63 63 64 79 80 80 83
LE                   : 60
MULASSIGN            : 33
NE                   : 61
ONES                 : 66
PRINT                : 18
RETURN               : 19
STRING               : 25 56
SUBASSIGN            : 31
WHILE                : 15
ZEROS                : 65
[                    : 68 71 79 80
]                    : 68 71 79 80
error                : 
{                    : 12
}                    : 12

Nonterminals, with rules where they appear:

assign_op            : 26 27 28
assign_stmt          : 11
block_stmt           : 9
cond                 : 13 14 15
expr                 : 17 17 19 24 26 27 28 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 53 57 57 58 58 59 59 60 60 61 61 62 62
for_stmt             : 6
id_ref               : 16 28 54 75
if_stmt              : 8
mat_func             : 63 64
mat_func_call        : 40
mat_row              : 69 70
mat_rows             : 68 70
matrix_init          : 41
matrix_ref           : 74
number               : 55 76
paren_expr           : 34
print_arg            : 22 23
print_args           : 18 23
program              : 0
program_body         : 1
range                : 16
ref_matrix           : 27 37 77
ref_vector           : 26 36 78
row_item             : 72 73
row_items            : 71 73
simple_stmt          : 10
statements           : 3 5 12
stmt                 : 4 5 13 13 14 15 16
string_lit           : 35
term                 : 42
transpose            : 38
unary_neg            : 39
while_stmt           : 7


state 0

    (0) S' -> . program
    (1) program -> . program_body
    (2) program_body -> .
    (3) program_body -> . statements
    (4) statements -> . stmt
    (5) statements -> . stmt statements
    (6) stmt -> . for_stmt
    (7) stmt -> . while_stmt
    (8) stmt -> . if_stmt
    (9) stmt -> . block_stmt
    (10) stmt -> . simple_stmt ;
    (11) stmt -> . assign_stmt ;
    (16) for_stmt -> . FOR id_ref = range stmt
    (15) while_stmt -> . WHILE ( cond ) stmt
    (13) if_stmt -> . IF ( cond ) stmt ELSE stmt
    (14) if_stmt -> . IF ( cond ) stmt
    (12) block_stmt -> . { statements }
    (18) simple_stmt -> . PRINT print_args
    (19) simple_stmt -> . RETURN expr
    (20) simple_stmt -> . CONTINUE
    (21) simple_stmt -> . BREAK
    (26) assign_stmt -> . ref_vector assign_op expr
    (27) assign_stmt -> . ref_matrix assign_op expr
    (28) assign_stmt -> . id_ref assign_op expr
    (79) ref_vector -> . ID [ INTNUM ]
    (80) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (81) id_ref -> . ID
    $end            reduce using rule 2 (program_body -> .)
    FOR             shift and go to state 11
    WHILE           shift and go to state 13
    IF              shift and go to state 14
    {               shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    ID              shift and go to state 22

    program                        shift and go to state 1
    program_body                   shift and go to state 2
    statements                     shift and go to state 3
    stmt                           shift and go to state 4
    for_stmt                       shift and go to state 5
    while_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    block_stmt                     shift and go to state 8
    simple_stmt                    shift and go to state 9
    assign_stmt                    shift and go to state 10
    id_ref                         shift and go to state 12
    ref_vector                     shift and go to state 20
    ref_matrix                     shift and go to state 21

state 1

    (0) S' -> program .


state 2

    (1) program -> program_body .
    $end            reduce using rule 1 (program -> program_body .)


state 3

    (3) program_body -> statements .
    $end            reduce using rule 3 (program_body -> statements .)


state 4

    (4) statements -> stmt .
    (5) statements -> stmt . statements
    (4) statements -> . stmt
    (5) statements -> . stmt statements
    (6) stmt -> . for_stmt
    (7) stmt -> . while_stmt
    (8) stmt -> . if_stmt
    (9) stmt -> . block_stmt
    (10) stmt -> . simple_stmt ;
    (11) stmt -> . assign_stmt ;
    (16) for_stmt -> . FOR id_ref = range stmt
    (15) while_stmt -> . WHILE ( cond ) stmt
    (13) if_stmt -> . IF ( cond ) stmt ELSE stmt
    (14) if_stmt -> . IF ( cond ) stmt
    (12) block_stmt -> . { statements }
    (18) simple_stmt -> . PRINT print_args
    (19) simple_stmt -> . RETURN expr
    (20) simple_stmt -> . CONTINUE
    (21) simple_stmt -> . BREAK
    (26) assign_stmt -> . ref_vector assign_op expr
    (27) assign_stmt -> . ref_matrix assign_op expr
    (28) assign_stmt -> . id_ref assign_op expr
    (79) ref_vector -> . ID [ INTNUM ]
    (80) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (81) id_ref -> . ID
    $end            reduce using rule 4 (statements -> stmt .)
    }               reduce using rule 4 (statements -> stmt .)
    FOR             shift and go to state 11
    WHILE           shift and go to state 13
    IF              shift and go to state 14
    {               shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    ID              shift and go to state 22

    stmt                           shift and go to state 4
    statements                     shift and go to state 23
    for_stmt                       shift and go to state 5
    while_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    block_stmt                     shift and go to state 8
    simple_stmt                    shift and go to state 9
    assign_stmt                    shift and go to state 10
    id_ref                         shift and go to state 12
    ref_vector                     shift and go to state 20
    ref_matrix                     shift and go to state 21

state 5

    (6) stmt -> for_stmt .
    FOR             reduce using rule 6 (stmt -> for_stmt .)
    WHILE           reduce using rule 6 (stmt -> for_stmt .)
    IF              reduce using rule 6 (stmt -> for_stmt .)
    {               reduce using rule 6 (stmt -> for_stmt .)
    PRINT           reduce using rule 6 (stmt -> for_stmt .)
    RETURN          reduce using rule 6 (stmt -> for_stmt .)
    CONTINUE        reduce using rule 6 (stmt -> for_stmt .)
    BREAK           reduce using rule 6 (stmt -> for_stmt .)
    ID              reduce using rule 6 (stmt -> for_stmt .)
    $end            reduce using rule 6 (stmt -> for_stmt .)
    }               reduce using rule 6 (stmt -> for_stmt .)
    ELSE            reduce using rule 6 (stmt -> for_stmt .)


state 6

    (7) stmt -> while_stmt .
    FOR             reduce using rule 7 (stmt -> while_stmt .)
    WHILE           reduce using rule 7 (stmt -> while_stmt .)
    IF              reduce using rule 7 (stmt -> while_stmt .)
    {               reduce using rule 7 (stmt -> while_stmt .)
    PRINT           reduce using rule 7 (stmt -> while_stmt .)
    RETURN          reduce using rule 7 (stmt -> while_stmt .)
    CONTINUE        reduce using rule 7 (stmt -> while_stmt .)
    BREAK           reduce using rule 7 (stmt -> while_stmt .)
    ID              reduce using rule 7 (stmt -> while_stmt .)
    $end            reduce using rule 7 (stmt -> while_stmt .)
    }               reduce using rule 7 (stmt -> while_stmt .)
    ELSE            reduce using rule 7 (stmt -> while_stmt .)


state 7

    (8) stmt -> if_stmt .
    FOR             reduce using rule 8 (stmt -> if_stmt .)
    WHILE           reduce using rule 8 (stmt -> if_stmt .)
    IF              reduce using rule 8 (stmt -> if_stmt .)
    {               reduce using rule 8 (stmt -> if_stmt .)
    PRINT           reduce using rule 8 (stmt -> if_stmt .)
    RETURN          reduce using rule 8 (stmt -> if_stmt .)
    CONTINUE        reduce using rule 8 (stmt -> if_stmt .)
    BREAK           reduce using rule 8 (stmt -> if_stmt .)
    ID              reduce using rule 8 (stmt -> if_stmt .)
    $end            reduce using rule 8 (stmt -> if_stmt .)
    }               reduce using rule 8 (stmt -> if_stmt .)
    ELSE            reduce using rule 8 (stmt -> if_stmt .)


state 8

    (9) stmt -> block_stmt .
    FOR             reduce using rule 9 (stmt -> block_stmt .)
    WHILE           reduce using rule 9 (stmt -> block_stmt .)
    IF              reduce using rule 9 (stmt -> block_stmt .)
    {               reduce using rule 9 (stmt -> block_stmt .)
    PRINT           reduce using rule 9 (stmt -> block_stmt .)
    RETURN          reduce using rule 9 (stmt -> block_stmt .)
    CONTINUE        reduce using rule 9 (stmt -> block_stmt .)
    BREAK           reduce using rule 9 (stmt -> block_stmt .)
    ID              reduce using rule 9 (stmt -> block_stmt .)
    $end            reduce using rule 9 (stmt -> block_stmt .)
    }               reduce using rule 9 (stmt -> block_stmt .)
    ELSE            reduce using rule 9 (stmt -> block_stmt .)


state 9

    (10) stmt -> simple_stmt . ;
    ;               shift and go to state 24


state 10

    (11) stmt -> assign_stmt . ;
    ;               shift and go to state 25


state 11

    (16) for_stmt -> FOR . id_ref = range stmt
    (81) id_ref -> . ID
    ID              shift and go to state 27

    id_ref                         shift and go to state 26

state 12

    (28) assign_stmt -> id_ref . assign_op expr
    (29) assign_op -> . =
    (30) assign_op -> . ADDASSIGN
    (31) assign_op -> . SUBASSIGN
    (32) assign_op -> . DIVASSIGN
    (33) assign_op -> . MULASSIGN
    =               shift and go to state 29
    ADDASSIGN       shift and go to state 30
    SUBASSIGN       shift and go to state 31
    DIVASSIGN       shift and go to state 32
    MULASSIGN       shift and go to state 33

    assign_op                      shift and go to state 28

state 13

    (15) while_stmt -> WHILE . ( cond ) stmt
    (               shift and go to state 34


state 14

    (13) if_stmt -> IF . ( cond ) stmt ELSE stmt
    (14) if_stmt -> IF . ( cond ) stmt
    (               shift and go to state 35


state 15

    (12) block_stmt -> { . statements }
    (4) statements -> . stmt
    (5) statements -> . stmt statements
    (6) stmt -> . for_stmt
    (7) stmt -> . while_stmt
    (8) stmt -> . if_stmt
    (9) stmt -> . block_stmt
    (10) stmt -> . simple_stmt ;
    (11) stmt -> . assign_stmt ;
    (16) for_stmt -> . FOR id_ref = range stmt
    (15) while_stmt -> . WHILE ( cond ) stmt
    (13) if_stmt -> . IF ( cond ) stmt ELSE stmt
    (14) if_stmt -> . IF ( cond ) stmt
    (12) block_stmt -> . { statements }
    (18) simple_stmt -> . PRINT print_args
    (19) simple_stmt -> . RETURN expr
    (20) simple_stmt -> . CONTINUE
    (21) simple_stmt -> . BREAK
    (26) assign_stmt -> . ref_vector assign_op expr
    (27) assign_stmt -> . ref_matrix assign_op expr
    (28) assign_stmt -> . id_ref assign_op expr
    (79) ref_vector -> . ID [ INTNUM ]
    (80) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (81) id_ref -> . ID
    FOR             shift and go to state 11
    WHILE           shift and go to state 13
    IF              shift and go to state 14
    {               shift and go to state 15
    PRINT           shift and go to state 16
    RETURN          shift and go to state 17
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    ID              shift and go to state 22

    statements                     shift and go to state 36
    stmt                           shift and go to state 4
    for_stmt                       shift and go to state 5
    while_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    block_stmt                     shift and go to state 8
    simple_stmt                    shift and go to state 9
    assign_stmt                    shift and go to state 10
    id_ref                         shift and go to state 12
    ref_vector                     shift and go to state 20
    ref_matrix                     shift and go to state 21

state 16

    (18) simple_stmt -> PRINT . print_args
    (22) print_args -> . print_arg
    (23) print_args -> . print_args , print_arg
    (24) print_arg -> . expr
    (25) print_arg -> . STRING
    (34) expr -> . paren_expr
    (35) expr -> . string_lit
    (36) expr -> . ref_vector
    (37) expr -> . ref_matrix
    (38) expr -> . transpose
    (39) expr -> . unary_neg
    (40) expr -> . mat_func_call
    (41) expr -> . matrix_init
    (42) expr -> . term
    (43) expr -> . expr DOTDIV expr
    (44) expr -> . expr DOTMUL expr
    (45) expr -> . expr DOTSUB expr
    (46) expr -> . expr DOTADD expr
    (47) expr -> . expr / expr
    (48) expr -> . expr * expr
    (49) expr -> . expr - expr
    (50) expr -> . expr + expr
    (53) paren_expr -> . ( expr )
    (56) string_lit -> . STRING
    (79) ref_vector -> . ID [ INTNUM ]
    (80) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (52) transpose -> . expr '
    (51) unary_neg -> . - expr
    (63) mat_func_call -> . mat_func ( INTNUM , INTNUM )
    (64) mat_func_call -> . mat_func ( INTNUM )
    (68) matrix_init -> . [ mat_rows ]
    (54) term -> . id_ref
    (55) term -> . number
    (65) mat_func -> . ZEROS
    (66) mat_func -> . ONES
    (67) mat_func -> . EYE
    (81) id_ref -> . ID
    (82) number -> . FLOATNUM
    (83) number -> . INTNUM
    STRING          shift and go to state 40
    (               shift and go to state 51
    ID              shift and go to state 22
    -               shift and go to state 50
    [               shift and go to state 52
    ZEROS           shift and go to state 57
    ONES            shift and go to state 58
    EYE             shift and go to state 59
    FLOATNUM        shift and go to state 60
    INTNUM          shift and go to state 53

    print_args                     shift and go to state 37
    print_arg                      shift and go to state 38
    expr                           shift and go to state 39
    paren_expr                     shift and go to state 41
    string_lit                     shift and go to state 42
    ref_vector                     shift and go to state 43
    ref_matrix                     shift and go to state 44
    transpose                      shift and go to state 45
    unary_neg                      shift and go to state 46
    mat_func_call                  shift and go to state 47
    matrix_init                    shift and go to state 48
    term                           shift and go to state 49
    mat_func                       shift and go to state 54
    id_ref                         shift and go to state 55
    number                         shift and go to state 56

state 17

    (19) simple_stmt -> RETURN . expr
    (34) expr -> . paren_expr
    (35) expr -> . string_lit
    (36) expr -> . ref_vector
    (37) expr -> . ref_matrix
    (38) expr -> . transpose
    (39) expr -> . unary_neg
    (40) expr -> . mat_func_call
    (41) expr -> . matrix_init
    (42) expr -> . term
    (43) expr -> . expr DOTDIV expr
    (44) expr -> . expr DOTMUL expr
    (45) expr -> . expr DOTSUB expr
    (46) expr -> . expr DOTADD expr
    (47) expr -> . expr / expr
    (48) expr -> . expr * expr
    (49) expr -> . expr - expr
    (50) expr -> . expr + expr
    (53) paren_expr -> . ( expr )
    (56) string_lit -> . STRING
    (79) ref_vector -> . ID [ INTNUM ]
    (80) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (52) transpose -> . expr '
    (51) unary_neg -> . - expr
    (63) mat_func_call -> . mat_func ( INTNUM , INTNUM )
    (64) mat_func_call -> . mat_func ( INTNUM )
    (68) matrix_init -> . [ mat_rows ]
    (54) term -> . id_ref
    (55) term -> . number
    (65) mat_func -> . ZEROS
    (66) mat_func -> . ONES
    (67) mat_func -> . EYE
    (81) id_ref -> . ID
    (82) number -> . FLOATNUM
    (83) number -> . INTNUM
    (               shift and go to state 51
    STRING          shift and go to state 62
    ID              shift and go to state 22
    -               shift and go to state 50
    [               shift and go to state 52
    ZEROS           shift and go to state 57
    ONES            shift and go to state 58
    EYE             shift and go to state 59
    FLOATNUM        shift and go to state 60
    INTNUM          shift and go to state 53

    expr                           shift and go to state 61
    paren_expr                     shift and go to state 41
    string_lit                     shift and go to state 42
    ref_vector                     shift and go to state 43
    ref_matrix                     shift and go to state 44
    transpose                      shift and go to state 45
    unary_neg                      shift and go to state 46
    mat_func_call                  shift and go to state 47
    matrix_init                    shift and go to state 48
    term                           shift and go to state 49
    mat_func                       shift and go to state 54
    id_ref                         shift and go to state 55
    number                         shift and go to state 56

state 18

    (20) simple_stmt -> CONTINUE .
    ;               reduce using rule 20 (simple_stmt -> CONTINUE .)


state 19

    (21) simple_stmt -> BREAK .
    ;               reduce using rule 21 (simple_stmt -> BREAK .)


state 20

    (26) assign_stmt -> ref_vector . assign_op expr
    (29) assign_op -> . =
    (30) assign_op -> . ADDASSIGN
    (31) assign_op -> . SUBASSIGN
    (32) assign_op -> . DIVASSIGN
    (33) assign_op -> . MULASSIGN
    =               shift and go to state 29
    ADDASSIGN       shift and go to state 30
    SUBASSIGN       shift and go to state 31
    DIVASSIGN       shift and go to state 32
    MULASSIGN       shift and go to state 33

    assign_op                      shift and go to state 63

state 21

    (27) assign_stmt -> ref_matrix . assign_op expr
    (29) assign_op -> . =
    (30) assign_op -> . ADDASSIGN
    (31) assign_op -> . SUBASSIGN
    (32) assign_op -> . DIVASSIGN
    (33) assign_op -> . MULASSIGN
    =               shift and go to state 29
    ADDASSIGN       shift and go to state 30
    SUBASSIGN       shift and go to state 31
    DIVASSIGN       shift and go to state 32
    MULASSIGN       shift and go to state 33

    assign_op                      shift and go to state 64

state 22

    (79) ref_vector -> ID . [ INTNUM ]
    (80) ref_matrix -> ID . [ INTNUM , INTNUM ]
    (81) id_ref -> ID .
    [               shift and go to state 65
    =               reduce using rule 81 (id_ref -> ID .)
    ADDASSIGN       reduce using rule 81 (id_ref -> ID .)
    SUBASSIGN       reduce using rule 81 (id_ref -> ID .)
    DIVASSIGN       reduce using rule 81 (id_ref -> ID .)
    MULASSIGN       reduce using rule 81 (id_ref -> ID .)
    DOTDIV          reduce using rule 81 (id_ref -> ID .)
    DOTMUL          reduce using rule 81 (id_ref -> ID .)
    DOTSUB          reduce using rule 81 (id_ref -> ID .)
    DOTADD          reduce using rule 81 (id_ref -> ID .)
    /               reduce using rule 81 (id_ref -> ID .)
    *               reduce using rule 81 (id_ref -> ID .)
    -               reduce using rule 81 (id_ref -> ID .)
    +               reduce using rule 81 (id_ref -> ID .)
    '               reduce using rule 81 (id_ref -> ID .)
    ,               reduce using rule 81 (id_ref -> ID .)
    ;               reduce using rule 81 (id_ref -> ID .)
    >               reduce using rule 81 (id_ref -> ID .)
    <               reduce using rule 81 (id_ref -> ID .)
    GE              reduce using rule 81 (id_ref -> ID .)
    LE              reduce using rule 81 (id_ref -> ID .)
    NE              reduce using rule 81 (id_ref -> ID .)
    EQ              reduce using rule 81 (id_ref -> ID .)
    )               reduce using rule 81 (id_ref -> ID .)
    :               reduce using rule 81 (id_ref -> ID .)
    FOR             reduce using rule 81 (id_ref -> ID .)
    WHILE           reduce using rule 81 (id_ref -> ID .)
    IF              reduce using rule 81 (id_ref -> ID .)
    {               reduce using rule 81 (id_ref -> ID .)
    PRINT           reduce using rule 81 (id_ref -> ID .)
    RETURN          reduce using rule 81 (id_ref -> ID .)
    CONTINUE        reduce using rule 81 (id_ref -> ID .)
    BREAK           reduce using rule 81 (id_ref -> ID .)
    ID              reduce using rule 81 (id_ref -> ID .)


state 23

    (5) statements -> stmt statements .
    $end            reduce using rule 5 (statements -> stmt statements .)
    }               reduce using rule 5 (statements -> stmt statements .)


state 24

    (10) stmt -> simple_stmt ; .
    FOR             reduce using rule 10 (stmt -> simple_stmt ; .)
    WHILE           reduce using rule 10 (stmt -> simple_stmt ; .)
    IF              reduce using rule 10 (stmt -> simple_stmt ; .)
    {               reduce using rule 10 (stmt -> simple_stmt ; .)
    PRINT           reduce using rule 10 (stmt -> simple_stmt ; .)
    RETURN          reduce using rule 10 (stmt -> simple_stmt ; .)
    CONTINUE        reduce using rule 10 (stmt -> simple_stmt ; .)
    BREAK           reduce using rule 10 (stmt -> simple_stmt ; .)
    ID              reduce using rule 10 (stmt -> simple_stmt ; .)
    $end            reduce using rule 10 (stmt -> simple_stmt ; .)
    }               reduce using rule 10 (stmt -> simple_stmt ; .)
    ELSE            reduce using rule 10 (stmt -> simple_stmt ; .)


state 25

    (11) stmt -> assign_stmt ; .
    FOR             reduce using rule 11 (stmt -> assign_stmt ; .)
    WHILE           reduce using rule 11 (stmt -> assign_stmt ; .)
    IF              reduce using rule 11 (stmt -> assign_stmt ; .)
    {               reduce using rule 11 (stmt -> assign_stmt ; .)
    PRINT           reduce using rule 11 (stmt -> assign_stmt ; .)
    RETURN          reduce using rule 11 (stmt -> assign_stmt ; .)
    CONTINUE        reduce using rule 11 (stmt -> assign_stmt ; .)
    BREAK           reduce using rule 11 (stmt -> assign_stmt ; .)
    ID              reduce using rule 11 (stmt -> assign_stmt ; .)
    $end            reduce using rule 11 (stmt -> assign_stmt ; .)
    }               reduce using rule 11 (stmt -> assign_stmt ; .)
    ELSE            reduce using rule 11 (stmt -> assign_stmt ; .)


state 26

    (16) for_stmt -> FOR id_ref . = range stmt
    =               shift and go to state 66


state 27

    (81) id_ref -> ID .
    =               reduce using rule 81 (id_ref -> ID .)


state 28

    (28) assign_stmt -> id_ref assign_op . expr
    (34) expr -> . paren_expr
    (35) expr -> . string_lit
    (36) expr -> . ref_vector
    (37) expr -> . ref_matrix
    (38) expr -> . transpose
    (39) expr -> . unary_neg
    (40) expr -> . mat_func_call
    (41) expr -> . matrix_init
    (42) expr -> . term
    (43) expr -> . expr DOTDIV expr
    (44) expr -> . expr DOTMUL expr
    (45) expr -> . expr DOTSUB expr
    (46) expr -> . expr DOTADD expr
    (47) expr -> . expr / expr
    (48) expr -> . expr * expr
    (49) expr -> . expr - expr
    (50) expr -> . expr + expr
    (53) paren_expr -> . ( expr )
    (56) string_lit -> . STRING
    (79) ref_vector -> . ID [ INTNUM ]
    (80) ref_matrix -> . ID [ INTNUM , INTNUM ]
    (52) transpose -> . expr '
    (51) unary_neg -> . - expr
    (63) mat_func_call -> . mat_func ( INTNUM , INTNUM )
    (64) mat_func_call -> . mat_func ( INTNUM )
    (68) matrix_init -> . [ mat_rows ]
    (54) term -> . id_ref
    (55) term -> . number
    (65) mat_func -> . ZEROS
    (66) mat_func -> . ONES
    (67) mat_func -> . EYE
    (81) id_ref -> . ID
    (82) number -> . FLOATNUM
    (83) number -> . INTNUM
    (               shift and go to state 51
    STRING          shift and go to state 62
    ID              shift and go to state 22
    -               shift and go to state 50
    [               shift and go to state 52
    ZEROS           shift and go to state 57
    ONES            shift and go to state 58
    EYE             shift and go to state 59
    FLOATNUM        shift and go to state 60
    INTNUM          shift and go to state 53

    id_ref                         shift and go to state 55
    expr                           shift and go to state 67
    paren_expr                     shift and go to state 41
    string_lit                     shift and go to state 42
    ref_vector                     shift and go to state 43
    ref_matrix                     shift and go to state 44
    transpose                      shift and go to state 45
    unary_neg                      shift and go to state 46
    mat_func_call                  shift and go to state 47
    matrix_init                    shift and go to state 48
    term                           shift and go to state 49
    mat_func                       shift and go to state 54
    number                         shift and go to state 56

state 29

    (29) assign_op -> = .
    (               reduce using rule 29 (assign_op -> = .)
    STRING          reduce using rule 29 (assign_op -> = .)
    ID              reduce using rule 29 (assign_op -> = .)
    -               reduce using rule 29 (assign_op -> = .)
    [               reduce using rule 29 (assign_op -> = .)
    ZEROS           reduce using rule 29 (assign_op -> = .)
    ONES            reduce using rule 29 (assign_op -> = .)
    EYE             reduce using rule 29 (assign_op -> = .)
    FLOATNUM        reduce using rule 29 (assign_op -> = .)
    INTNUM          reduce using rule 29 (assign_op -> = .)


state 30

    (30) assign_op -> ADDASSIGN .
    (               reduce using rule 30 (assign_op -> ADDASSIGN .)
    STRING          reduce using rule 30 (assign_op -> ADDASSIGN .)
    ID              reduce using rule 30 (assign_op -> ADDASSIGN .)
    -               reduce using rule 30 (assign_op -> ADDASSIGN .)
    [               reduce using rule 30 (assign_op -> ADDASSIGN .)
    ZEROS           reduce using rule 30 (assign_op -> ADDASSIGN .)
    ONES            reduce using rule 30 (assign_op -> ADDASSIGN .)
    EYE             reduce using rule 30 (assign_op -> ADDASSIGN .)
    FLOATNUM        reduce using rule 30 (assign_op -> ADDASSIGN .)
    INTNUM          reduce using rule 30 (assign_op -> ADDASSIGN .)


state 31

    (31) assign_op -> SUBASSIGN .
    (               reduce using rule 31 (assign_op -> SUBASSIGN .)
    STRING          reduce using rule 31 (assign_op -> SUBASSIGN .)
    ID              reduce using rule 31 (assign_op -> SUBASSIGN .)
    -               reduce using rule 31 (assign_op -> SUBASSIGN .)
    [               reduce using rule 31 (assign_op -> SUBASSIGN .)
    ZEROS           reduce using rule 31 (assign_op -> SUBASSIGN .)
    ONES            reduce using rule 31 (assign_op -> SUBASSIGN .)
    EYE             reduce using rule 31 (assign_op -> SUBASSIGN .)
    FLOATNUM        reduce using rule 31 (assign_op -> SUBASSIGN .)
    INTNUM          reduce using rule 31 (assign_op -> SUBASSIGN .)


state 32

    (32) assign_op -> DIVASSIGN .
    (               reduce using rule 32 (assign_op -> DIVASSIGN .)
    STRING          reduce using rule 32 (assign_op -> DIVASSIGN .)
    ID              reduce using rule 32 (assign_op -> DIVASSIGN .)
    -               reduce using rule 32 (assign_op -> DIVASSIGN .)
    [               reduce using rule 32 (assign_op -> DIVASSIGN .)
    ZEROS           reduce using rule 32 (assign_op -> DIVASSIGN .)
    ONES            reduce using rule 32 (assign_op -> DIVASSIGN .)
    EYE             reduce using rule 32 (assign_op -> DIVASSIGN .)
    FLOATNUM        reduce using rule 32 (assign_op -> DIVASSIGN .)
    INTNUM          reduce using rule 32 (assign_op -> DIVASSIGN .)


state 33

    (33) assign_op -> MULASSIGN .
    (               reduce using rule 33 (assign_op -> MULASSIGN .)
    STRING          reduce using rule 33 (assign_op -> MULASSIGN .)
    ID              reduce using rule 33 (assign_op -> MULASSIGN .)
    -               reduce using rule 33 (assign_op -> MULASSIGN .)
    [               reduce using rule 33 (assign_op -> MULASSIGN .)
    ZEROS           reduce using rule 33 (assign_op -> MULASSIGN .)
    ONES            reduce using rule 33 (assign_op -> MULASSIGN .)
    EYE             reduce using rule 33 (assign_op -> MULASSIGN .)
    FLOATNUM        reduce using rule 33 (assign_op -> MULASSIGN .)
    INTNUM          reduce using rule 33 (assign_op -> MULASSIGN .)


state 34
